{
  "browse": "بازار",
  "categories": "دسته‌بندی‌ها",
  "saved": "ذخیره‌شده‌ها",
  "chat": "گفتگوها",
  "profile": "من",
  "myListings": "دکان من",
  "createListing": "آگهی جدید",
  "sellerDashboard": "داشبورد فروشنده"
}